VPC-creation.json
{
  "Description" : "Create underlying network for projects in eu-west-2 region",

  "Resources": {
    
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,

		"Tags": [ 
		  {
 		   "Key" : "Name",
		   "Value" : "MP-vpc"
		  }
        ]
      }
    },
 

    "IGW": {
      "Type": "AWS::EC2::InternetGateway"
    },

    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties" : {
       "VpcId": { "Ref": "VPC" },
       "InternetGatewayId": { "Ref": "IGW" }
      }
    },

    "SubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
         "AvailabilityZone": "eu-west-2a",
         "VpcId": { "Ref":  "VPC" },
         "CidrBlock": "172.31.0.0/20",
         "MapPublicIpOnLaunch": true,
         "Tags": [ 
		  {
 		   "Key" : "Name",
		   "Value" : "MP-SN-A"
		  }
        ]
      }
    },
    "subnetARTA": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "RouteTableId" : {"Ref" : "RouteTable"},
        "SubnetId" : {"Ref" : "SubnetA"}
      }
    },
    "SubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
         "AvailabilityZone": "eu-west-2b",
         "VpcId": { "Ref":  "VPC" },
         "CidrBlock": "172.31.16.0/20",
         "MapPublicIpOnLaunch": true,
         "Tags": [ 
		  {
 		   "Key" : "Name",
		   "Value" : "MP-SN-B"
		  }
        ]
      }
    },
    "subnetBRTA": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "RouteTableId" : {"Ref" : "RouteTable"},
        "SubnetId" : {"Ref" : "SubnetB"}
      }
    },
    "SubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
         "AvailabilityZone": "eu-west-2a",
         "VpcId": { "Ref":  "VPC" },
         "CidrBlock": "172.31.32.0/20",
         "MapPublicIpOnLaunch": true,
         "Tags": [ 
		  {
 		   "Key" : "Name",
		   "Value" : "MP-SN-C"
		  }
        ]
      }
    },
    "subnetCRTA": {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "RouteTableId" : {"Ref" : "RouteTable"},
        "SubnetId" : {"Ref" : "SubnetC"}
      }
    },


    "RouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" }
      }
    },

    "InternetRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "VPCGatewayAttachment",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "IGW" },
        "RouteTableId": { "Ref": "RouteTable" }
      }
    },



    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "Internet Group",
        "GroupDescription": "SSH traffic in, all traffic out.",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": -1,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }





  },



  "Outputs" : {
    "BaseNetworkVPC" : {
      "Description" : "BaseNetwork VPC ID",
      "Value" : { "Ref": "VPC" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCID" } }
    },
    "BaseNetworkSNA" : {
      "Description" : "BaseNetwork Subnet-a",
      "Value" : { "Ref": "SubnetA" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-SubnetA" } }
    },
    "BaseNetworkSNB" : {
      "Description" : "BaseNetwork Subnet-b",
      "Value" : { "Ref": "SubnetB" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-SubnetB" } }
    },
    "BaseNetworkSNC" : {
      "Description" : "BaseNetwork Subnet-c",
      "Value" : { "Ref": "SubnetC" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-SubnetC" } }
    },
    "BaseNetworkSG" : {
      "Description" : "Base Network Security Group",
      "Value" : { "Ref": "SecurityGroup" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-SG" } }
    },
    "BaseNetworkIGW" : {
      "Description" : "BaseNetwork Internet Gateway",
      "Value" : { "Ref": "IGW" } ,    
      "Export": { "Name" : {"Fn::Sub": "${AWS::StackName}-IGW" } }
    }
  }
}
